--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,18 +4,18 @@
 {% if page.tertiary-column %}{% if page.tertiary-column == 'present' %}{% assign tertiary-column = 'present' %}{% endif %}{% else %}{% if site.data.setup.tertiary-column == 'present' %}{% assign tertiary-column = 'present' %}{% endif %}{% endif %}
 {% if page.tertiary-column-content %}{% assign tertiary-column-content = page.tertiary-column-content %}{% else %}{% assign tertiary-column-content = 'tertiary-column.html' %}{% endif %}
 {% if page.navbanner-position %}{% assign navbanner-position = page.navbanner-position %}{% else %}{% assign navbanner-position = site.data.setup.navbanner-position %}{% endif %}
-{% if navbanner-position == 'top-fixed' %}{% assign navbanner-classes = 'navbanner-panel navbanner-panel-fixed-menubar' %}{% assign column-panel-classes = 'column-panel column-panel-fixed-menubar' %}{% else %}{% assign navbanner-classes = 'navbanner-panel' %}{% assign column-panel-classes = 'column-panel' %}{% endif%}
+{% if site.data.setup.banner-position == 'top-fixed' %}{% assign banner-classes = 'banner-menubar banner-menubar-fixed' %}{% assign column-panel-classes = 'column-panel column-panel-fixed-menubar' %}{% else %}{% assign banner-classes = 'banner-menubar' %}{% assign column-panel-classes = 'column-panel' %}{% endif%}
 <html>
 
 	{% include head.html %}
 	
   	<body class="body-panel">
   	
-  		{% if navbanner-position == 'top' or navbanner-position == 'top-fixed' %}
-  			{% if site.data.setup.use-separate-navbanner and site.data.setup.drop-down-menu %}
-  				<div id="navFrame" class="{{ navbanner-classes }}"><script>$("#navFrame").load("/navbanner.html");</script></div>
+  		{% if site.data.setup.banner-position == 'top' or site.data.setup.banner-position == 'top-fixed' %}
+  			{% if site.data.setup.use-separate-banner-menubar-file and site.data.setup.drop-down-menu %}
+  				<div id="navFrame" class="{{ banner-classes }}"><script>$("#navFrame").load("/banner.html");</script></div>
   			{% else %}
-  				<div class="{{ navbanner-classes }}">{% include navbanner.html %}</div>
+  				<div class="{{ banner-classes }}">{% include banner.html %}</div>
   			{% endif %}
   		{% endif %}
 
@@ -45,11 +45,11 @@
 
 
 			<div class="primary-column">
-			  	{% if navbanner-position == 'main' %}
-  					{% if site.data.setup.use-separate-navbanner %}
-  						<div id="navFrame" class="navbanner-panel"><script>$("#navFrame").load("/navbanner.html");</script></div>
+			  	{% if site.data.setup.banner-position == 'main' %}
+  					{% if site.data.setup.use-separate-banner-menubar-file %}
+  						<div id="navFrame" class="banner-menubar"><script>$("#navFrame").load("/banner.html");</script></div>
   					{% else %}
-  						<div class="navbanner-panel">{% include navbanner.html %}</div>
+  						<div class="banner-menubar">{% include banner.html %}</div>
   					{% endif %}
   				{% endif %}
   				{% if site.data.setup.drop-down-menu %}{% else %}
