--- a/_includes/menubar.html
+++ b/_includes/menubar.html
@@ -125,7 +125,7 @@
 			{% endif %}
 		{% endif %}
 		
-		<div class="separator"><p><!-- empty but necessary --></p></div>
+		<div class="item-separator"><p><!-- empty but necessary --></p></div>
 		
 		<!-- If the menu selection and active page are the same, show it -->
 		{% if page.menuTopTitle == topTitle  %}
