--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
   			{% endif %}
   		{% endif %}
 
-		<div class="{{ column-panel-classes }}">
+		<div class="column-panel">
 
 			{% if secondary-column == 'left' %}
 			<div class="secondary-column">
